# mujoco-simulink-blockset

./: .gitignore  .instructions.md  README.md  ROADMAP.md  install.m
blocks/: README.md  dummy.xml  export_yolo_data.m  generate_mujoco_from_xacro_workspace.m  importrobot_xacro_workspace.m  initialize_xacro_import_environment.m  mjLib.slx  mjLib_old.slx  mj_debug_segmentation.m  mj_depth_near_far.mexw64  mj_export_yolo_dataset.m  mj_id2name_mex.mexw64  mj_initbus.m  mj_initbus_mex.mexw64  mj_maskinit.m  mj_parser_maskinit.m  mj_postcodegen_grt.m  mj_sampletime.mexw64  mj_segmentation_decoder.m  mj_segmentation_to_yolo.m  mj_segmentation_video.m  mj_set_camera_resolution.m  mj_sfun.mexw64  mj_xml_labelmap.m  rtwmakecfg.m
docs/: custom-sdf-brick-chat-history.md  custom-sdf-lego-chat-history.md
examples/: brick_sdf_2x4.xml  brick_sdf_stack.xml  export_yolo_example.m  gettingStarted.slx  lego_sdf_2x4.xml  mj_gettingStarted.slx  mj_monitorTune.slx  mj_monitorTune_ROS.slx  mj_res_test.slx  monitorTune.slx  video_write.m
plugins/brick_sdf/: CMakeLists.txt  README.md  brick_shape.cc  brick_shape.h  register.cc  smoke_main.cc  stability_main.cc
plugins/lego_sdf/: CMakeLists.txt  README.md  lego_brick.cc  lego_brick.h  register.cc  smoke_main.cc  stability_main.cc
resources/project/Dwzv2YWXcBI8xuJG5g6DCmXs6V4/: pjkGKxbcu85YP5XfcohHh4NTLkEp.xml
resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: 7zQ5ZFN47x1-MCX5GZA003Bi24Yd.xml  7zQ5ZFN47x1-MCX5GZA003Bi24Yp.xml  FenPS9KU4sYrHrmsYjGW-kxNTbgd.xml  FenPS9KU4sYrHrmsYjGW-kxNTbgp.xml  HZErucURVQBVhUzA9WUxkmtd8MUd.xml  HZErucURVQBVhUzA9WUxkmtd8MUp.xml  xEO6PzMxj8e5NrGWLkuiNb2wY9cp.xml  xGplx-JBS8P38AihaV_HdFtd2kIp.xml
resources/project/HoHDHQ_WvHAAKj5aJOrvrg_vpt8/: xXlmKuOQ7YT_G1elNhbKQIUqSRMd.xml
resources/project/OfxnnyUcu5GSELEDRUyOXcMZW0c/: 5oaDWs9E1x1GneZ0OFKanPMkQIQp.xml  GDvV4zOEmJCYlxCJeHA8dUm0izkp.xml  PbScNi6-CXKzLeNXq0JJt9M72QMp.xml
resources/project/R6m7AxFfSX7StHtVJ9WG44h96GM/: AtOSigQNTpjWKSppINYsuxaJArsp.xml  JdbtDgNfCa8eeDAPsRtZZcihfgMp.xml  RbsUekL6HqdHwRgcZU9OJxTRpcYp.xml  XbT6uxs1awDc032HNNYN1JpcQH8p.xml  YNIbmE9KLlKmZiWtnWZ1zZfRqZ0p.xml  lQDWmns0FLLIZmhuDuJiAnnz1f4p.xml  m6iOFesDKHb8brUC29GlhjrroAgp.xml  p28Xx_UaLNS8cvcc2FpmuBGbqSIp.xml  se4Gvp5OTwFL0I4EOGr5LrVqwMsp.xml
resources/project/Wn5Z3vbmXlwGCAQi9rziwRAwzRg/: EDvhdEK2Bc846gDOUO07EWN1iEAp.xml  K2H-TJDeh26b9QrMf1YSOf-HnqQp.xml  WPyaDesCj8TSRD1PnFjPsztzRIEp.xml  Xl6XMS2h31lP3Kt4efdjBVGP2m0p.xml  qoEsgpY_Ipu5Lm-bRNuWrg6ir1Mp.xml
resources/project/ibMM92X1vzGj-glckTojy4GMZtE/: BQdZ3FcLAJU7HmE_A2v0CinmrEMp.xml  GFJxDwZM2asGMAs8RpErdfeGCRop.xml  GcDsYiWM-SzGZI49sWBa6Uf63m4p.xml  I_5kiQu8BfTvIobDbBcQkdQZUQcp.xml  JOumct0mNBBG6p2bk1vjky84JiAp.xml  KWoRzYgvZEyBcuS5jRBXp5iHepkp.xml  T3vYX1eW8RYaNTVnZtt0Rs0AV5Ip.xml  Ti-pNUlLRU6CMxJmAUs8n-2zVVMp.xml  VIy5vqSuu2G6UCgL2nFEQoSPMKcp.xml  Y-8UnAsia-4JwOcfMB0mypRyEIUp.xml  ZCJgXQpRyrMJe-vjLY8GUIYjI8kp.xml  bGc5DqXcHzEisbpwQNbCkRHas60p.xml  ewURgUdA2wPtQ7QSi5Vj2g8Pyssp.xml  gRAurkuPh7Je6kmF8IU61NAVcg4p.xml  i5UIdWvcpuyhmrR_Br9a7l6paLMp.xml  iq3pZper8WTOjeVtn7WkrAE9wEQp.xml  q0nKAhwjVbx9LVdxkFrtQ46F48cp.xml  vAq5PzGtso75SVfbKc0UXiCK4gYp.xml  x1el8SNyM6tXvmY6ZkbQSO1L49Ep.xml
resources/project/root/: GiiBklLgTxteCEmomM8RCvWT0nQd.xml
src/: mj.cpp  mj.hpp  mj_id2name_mex.cpp  mj_initbus_mex.cpp  mj_labelmap_mex.cpp  mj_sfun.cpp
tests/: .gitignore  README.md  latest.json  runAllTests.m  t_BrickSdfPlugin.m  t_CommandInputs.m  t_PerCameraResolution.m  t_ROS2_Linux.m  t_ROS2_Pi.m  t_ROS2_PiRuntime.m  t_ROS2_WSL.m  t_RenderingModes.m  t_SegmentationIDs.m  t_SegmentationVideo.m  t_SensorOutputs.m  t_XacroImport.m  t_YoloExport.m
tests/fixtures/: MujocoEnvFixture.m
tests/results/: 20260424_050227.json  20260424_063223.json  20260424_063437.json  20260424_063613.json  20260424_064342.json  20260424_064809.json  20260424_065341.json  20260424_065651.json  20260424_065835.json
tests/src/mj_monitortune_ros/: CMakeLists.txt  package.xml  packageInfo.mat
tests/src/mj_monitortune_ros/include/mj_monitortune_ros/: MW_custom_RTOS_header.h  fixedpoint.h  fixpoint_spec.h  linuxinitialize.h  mj_monitorTune_ROS.h  mj_monitorTune_ROS_private.h  mj_monitorTune_ROS_types.h  ros2nodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_matrx.h  rt_nonfinite.h  rtmodel.h  rtw_continuous.h  rtw_extmode.h  rtw_matlogging.h  rtw_solver.h  rtwtypes.h  simstruc.h  simstruc_compcond.h  simstruc_debug.h  simstruc_def.h  simstruc_fwd.h  simstruc_genericfcn.h  simstruc_implement.h  simstruc_internal.h  simstruc_internal_types.h  simstruc_types.h  simulink_solver_api.h  sl_common_types_def.h  sl_datatype_access.h  sl_sample_time_defs.h  slros2_generic_pubsub.h  slros2_initialize.h  slros2_multi_threaded_executor.h  slros2_time.h  slros_busmsg_conversion.cpp  solver_zc.h  visibility_control.h
tests/src/mj_monitortune_ros/src/: dummy.xml  main.cpp  mj.cpp  mj_monitorTune_ROS.cpp  mj_monitorTune_ROS_data.cpp  ros2nodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_matrx.c  rt_nonfinite.cpp  slros2_initialize.cpp  slros2_multi_threaded_executor.cpp
tests/utils/: refresh_library_links.m  tRunSim.m
tools/: Makefile  build_brick_sdf_plugin.m  build_labelmap_mex.m  build_lego_sdf_plugin.m  links.json  package.m  patch_parsers.m  setupBuild.m  setup_ros2_target.sh  smoke_brick_sdf_plugin.m  smoke_lego_sdf_plugin.m
tools/deviceProfiles/: .gitignore  README.md  mj_applyDeviceProfile.m  mj_createDeviceProfileFromTemplate.m  mj_exportDeviceProfileTemplates.m  mj_initROS2Workspace.m  mj_ros2DeviceProfileTemplate.m  mj_saveDeviceProfile.m  raspi-arm64-ros2jazzy.template.mat  ubuntu-2204-x64-ros2humble.template.mat  wsl-x64-ros2humble.template.mat
